26-aws-eks-project-deploy/kubernetes/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: react-nginx-ingress
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - host: udayvarmora.xyz
#       http:
#         paths:
#           - path: /api
#             backend:
#               service:
#                 name: node
#                 port:
#                   number: 80
#             pathType: Prefix
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: react
#                 port:
#                   number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: udayvarmora.xyz
      http:
        paths:
          - path: /api
            backend:
              service:
                name: node
                port:
                  number: 80
            pathType: Prefix
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react
                port:
                  number: 80
